# predicate-calculus

./: ChangeLog.md  LICENSE  predicate-calculus.cabal
src/Data/Bool/: Predicates.lhs
