name:                predicate-calculus
version:             0.1.0.0
synopsis:            High order boolean functions (predicates)
description:         This functions make possible defining functions
    in point-free style which is better for equational reasoning.
homepage:            https://github.com/lamg/predicate-calculus
license:             BSD3
license-file:        LICENSE
author:              Luis Ángel Méndez Gort
maintainer:          Luis Ángel Méndez Gort<gort.andres000@gmail.com>
copyright:           2016, Luis Ángel Méndez Gort
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Bool.Predicates
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
